need to check tomorrow

--- a/AppGestionEMS/Views/Matriculas/Index.cshtml
+++ b/AppGestionEMS/Views/Matriculas/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AppGestionEMS.Models.AsignacionDocentes>
+﻿@model IEnumerable<AppGestionEMS.Models.Matriculas>
 
 @{
     ViewBag.Title = "Index";
@@ -23,6 +23,7 @@
         <th></th>
     </tr>
 
+   
 @foreach (var item in Model) {
     <tr>
         <td>
