--- a/AppGestionEMS/Views/AsignacionDocentes/Details.cshtml
+++ b/AppGestionEMS/Views/AsignacionDocentes/Details.cshtml
@@ -26,6 +26,14 @@
             @Html.DisplayFor(model => model.GrupoClase.descripcion)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.User.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.User.Name)
+        </dd>
+
     </dl>
 </div>
 <p>
