--- a/AppGestionEMS/Views/Matriculas/Delete.cshtml
+++ b/AppGestionEMS/Views/Matriculas/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AppGestionEMS.Models.AsignacionDocentes
+﻿@model AppGestionEMS.Models.Matriculas
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>AsignacionDocentes</h4>
+    <h4>Matriculas</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
