--- a/AppGestionEMS/Views/Shared/_Layout.cshtml
+++ b/AppGestionEMS/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                     <li>@Html.ActionLink("Cursos", "Index", "Cursos")</li>
                     <li>@Html.ActionLink("GrupoClases", "Index", "GrupoClases")</li>
                     <li>@Html.ActionLink("AsignacionDocentes", "Index", "AsignacionDocentes")</li>
+                    <li>@Html.ActionLink("Matriculas", "Index", "Matriculas")</li>
+                    <li>@Html.ActionLink("Evaluaciones", "Index", "Evaluaciones")</li>
+                    <li>@Html.ActionLink("MisEvaluaciones", "Index", "MisEvaluaciones")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                     
